--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -58,6 +58,24 @@
   <audio data-key="76" src="sounds/tink.wav"></audio>
 
 <script>
+  window.addEventListener('keydown', function (e) {
+    const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
+    const key = document.querySelector(`key[data-key="${e.keyCode}"]`);
+    if(!audio) return; //stops function from running alltogether
+    audio.currentTime = 0; // rewind to start
+    audio.play();
+    key.classList.add('playing'); // same as key.addClass('playing')
+
+  });
+
+  function removeTransition(e) {
+    if (e.propertyName !== 'transform') return; //skip it if it's not a transform
+    this.classList.remove('playing;');//this refers to key because this is always the object the .addEventListener gets called against, so in this example, this = key
+
+  }
+
+  const keys = document.querySelectorAll('.key');
+  keys.forEach(key => key.addEventListener('transitioned', removeTransition));
 
 </script>
 
