--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -70,7 +70,7 @@
 
   function removeTransition(e) {
     if (e.propertyName !== 'transform') return; //skip it if it's not a transform
-    this.classList.remove('playing;');//this refers to key because this is always the object the .addEventListener gets called against, so in this example, this = key
+    this.classList.remove('playing;');//this refers to key because this is always the object the .addEventListener gets called against, so in this example, this = key ??
 
   }
 
