--- a/02 - JS and CSS Clock/index-START.html
+++ b/02 - JS and CSS Clock/index-START.html
@@ -62,13 +62,59 @@
       background: black;
       position: absolute;
       top: 50%;
+      transform-origin: 100%; /*so that all zeiger start at noon*/
+      transform: rotate(90deg);
+      transition: all 0.05s; /*to tick the zeiger around*/
+      transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1); /*goes a little over bounds and snaps back to give realtistic snapping feature*/
     }
 
   </style>
 
   <script>
+    // step 3
+    const secondHand = document.querySelector('second-hand');
+    const minHand = document.querySelector('min-hand');
+    const hourHand = document.querySelector('hour-hand');
+    //
+    // step one
+    function setDate() {
+      const now = new Date();
+    // step two
+      const seconds = now.getSeconds();
+      const secondsDegrees = ((seconds / 60) * 360) + 90;
+      secondHand.style.transform = `rotate(${secondsDegrees}deg)`;
+
+      const mins = now.getMinutes();
+      const minsDegrees = ((mins / 60) * 360) + 90;
+      minHand.style.transform = `rotate(${minsDegrees}deg)`;
+
+      const hours = now.getHours();
+      const hoursDegrees = ((hours / 12) * 360) + 90;
+      hourHand.style.transform = `rotate(${hoursDegrees}deg)`;
 
 
+
+    }
+    // step 2
+    setInterval(setDate, 1000);
+    //1000 refers to 1000 miliseconds
   </script>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
