--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -30,29 +30,107 @@
     const people = ['Beck, Glenn', 'Becker, Carl', 'Beckett, Samuel', 'Beddoes, Mick', 'Beecher, Henry', 'Beethoven, Ludwig', 'Begin, Menachem', 'Belloc, Hilaire', 'Bellow, Saul', 'Benchley, Robert', 'Benenson, Peter', 'Ben-Gurion, David', 'Benjamin, Walter', 'Benn, Tony', 'Bennington, Chester', 'Benson, Leana', 'Bent, Silas', 'Bentsen, Lloyd', 'Berger, Ric', 'Bergman, Ingmar', 'Berio, Luciano', 'Berle, Milton', 'Berlin, Irving', 'Berne, Eric', 'Bernhard, Sandra', 'Berra, Yogi', 'Berry, Halle', 'Berry, Wendell', 'Bethea, Erin', 'Bevan, Aneurin', 'Bevel, Ken', 'Biden, Joseph', 'Bierce, Ambrose', 'Biko, Steve', 'Billings, Josh', 'Biondo, Frank', 'Birrell, Augustine', 'Black, Elk', 'Blair, Robert', 'Blair, Tony', 'Blake, William'];
 
     // Array.prototype.filter()
+    //Long version:
     // 1. Filter the list of inventors for those who were born in the 1500's
+      // const fifteen = inventors.filter(function(inventor) {
+      //     if(inventor.year >= 1500 && inventor.year < 1600) {
+      //       return true; // we keep the inventor! no need for else statement
+      //     }
+      // });
+      //  // gives you a table in the console, how cool!!!
+      // console.table(fifteen);
+
+      //sexy short version:
+      const fifteen = inventors.filter(inventor => (inventor.year >= 1500 && inventor.year < 1600))
+       // gives you a table in the console, how cool!!!
+      console.table(fifteen);
 
     // Array.prototype.map()
     // 2. Give us an array of the inventors first and last names
-
+    const name = inventors.map(inventor => `${inventor.first} ${inventor.last}`);
+    console.log(name);
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
+    // a refers to firstperson and b to secondperson to be compared
+    // const orderedAge = inventors.sort(function(a, b) {
+    //   if(a.year > b.year) {
+    //     return 1;
+    //   } else {
+    //     return -1;
+    //   }
+    // });
+    const orderedAge = inventors.sort((a, b) => a.year > b.year ? 1 : -1);
+    console.table(orderedAge)
 
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live all together?
+    //instead of this complicated stuff:
+    // var totalYears = 0;
+
+    // for (var i = 0; i < inventors.length; i++) {
+    //   totalYears += inventors[i].year
+    // }
+    //we simply do this:
+    const totalYears = inventors.reduce((total, inventor) => {
+      return total + (inventor.passed - inventor.year);
+
+    }, 0);
+
+    console.log(totalYears)
 
     // 5. Sort the inventors by years lived
+    const oldest = inventors.sort(function(a, b) {
+      const lastGuy = a.passed - a.year;
+      const nextGuy = b.passed - b.year;
+      //instead of long if statement we use tenary
+
+      return lastGuy > nextGuy ? -1 : 1;
+    })
+
+    console.table(oldest)
 
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
 
+    //we open link and use inspector tool to find div name that is relevant for query
+   const category = document.querySelector('mw-category');
+    // we can call querySelctor on any DOM element, doesnt always have to be document
+    // a is reference for links thats why we look for a here
+    // const links = category.querySelectorAll('a');
+    // --> this gives us a nodelist on which we cannot use map so we need to make it into an array in order to proceed:
+    // const links = [...category.querySelectorAll('a')];
+    //Or:
+    const links = Array.from(category.querySelectorAll('a'));
+
+    const de = links
+                .map(link => link.textContent)
+                .filter(streetName => streetName.includes('de'));
+
 
     // 7. sort Exercise
     // Sort the people alphabetically by last name
+    const alpha = people.sort((lastOne, nextOne) => {
+      // const parts = lastOne.split(', '); this gives us the first and last name of one person in an array so that each full name is its own array but we just put them in their own variables straight away:
+      const [aLast, aFirst] = lastOne.split(', ');
+      const [bLast, bFirst] = nextOne.split(', ');
+      return aLast > bLast ? 1 : -1;
+      // return aLast > bLast ? -1 : 1; if we wanted to sort antialphabetically
+    });
+    console.log(alpha);
 
     // 8. Reduce Exercise
     // Sum up the instances of each of these
     const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck' ];
+
+    const transportation = data.reduce(function(obj, item) {
+      if (!obj[item]) {
+        obj[item] = 0;
+      }
+      obj[item]++;
+      return obj;
+    }, {});
+    // {} means we start with a blank object, instead of writing it like  ,{car: 0, walk: 0} because we don;t know what the possible items are, so we cant hardcode them, basically we start with the empty curly braces and that sets out item to zero and then we increment it if there is an item
+    console.log(transportation);
 
   </script>
 </body>
